[package]
name = "relayer"
version = "0.1.0"
authors = ["bugnofree <pwnkeeper@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0"
clap = "2.33.0"
dirs = "2.0.2"
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"


[[bin]]
name = "relayc"
path = "src/bin/relayc.rs"

[[bin]]
name = "relays"
path = "src/bin/relays.rs"
