[package]
name = "relayer"
version = "0.1.0"
authors = ["bugnofree <pwnkeeper@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.119", features = ["derive"] }
serde_json = "1.0"
clap = "2.33.0"
dirs = "2.0.2"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
thiserror = "1.0.23"
anyhow = "1.0.38"

[[bin]]
name = "relayc"
path = "src/bin/relayc.rs"

[[bin]]
name = "relays"
path = "src/bin/relays.rs"
